Chaged table structures; fixed some tests; NEXT: neer to adjust/rewrite repository test to testContainers and DataJpaTest