@@ -1,8 +1,7 @@
 package com.dvelenteienko.services.currency.domain.dto;
 
 import com.dvelenteienko.services.currency.domain.entity.Currency;
-import com.dvelenteienko.services.currency.domain.entity.CurrencyRate;
-import com.dvelenteienko.services.currency.domain.entity.enums.CurrencyType;
+import com.dvelenteienko.services.currency.domain.entity.Rate;
 import lombok.AllArgsConstructor;
 import lombok.EqualsAndHashCode;
 import lombok.Getter;
@@ -11,7 +10,6 @@ import lombok.experimental.SuperBuilder;
 
 import java.time.LocalDateTime;
 import java.util.List;
-import java.util.UUID;
 import java.util.stream.Collectors;
 
 @Getter
@@ -21,27 +19,24 @@ import java.util.stream.Collectors;
 @SuperBuilder(setterPrefix = "set")
 public class CurrencyRateDto {
 
-    private String source;
     private String base;
+    private String source;
     private LocalDateTime date;
     private Double rate;
 
-    public static List<CurrencyRate> fromDto(List<CurrencyRateDto> currencyRateDtos) {
+    public static List<Rate> from(List<CurrencyRateDto> currencyRateDtos, Currency currency) {
         return currencyRateDtos.stream()
-                .map(cr -> CurrencyRate.builder()
-                        .rate(cr.getRate())
-                        .date(cr.getDate())
-                        .source(cr.getSource())
-                        .baseCurrencyCode(Currency.builder()
-                                .code(cr.getBase())
-                                .type(CurrencyType.BASE)
-                                .id(UUID.randomUUID()).build())
+                .map(cr -> Rate.builder()
+                        .setSource(cr.getSource())
+                        .setBaseCurrencyCode(currency)
+                        .setDate(cr.getDate())
+                        .setRate(cr.getRate())
                         .build())
-                .toList();
+                .collect(Collectors.toList());
     }
 
-    public static List<CurrencyRateDto> toDto(List<CurrencyRate> currencyRates) {
-        return currencyRates.stream()
+    public static List<CurrencyRateDto> from(List<Rate> rates) {
+        return rates.stream()
                 .map(cr -> CurrencyRateDto.builder()
                         .setSource(cr.getSource())
                         .setBase(cr.getBaseCurrencyCode().getCode())
